# neurallib

./: CMakeLists.txt  README.txt  basicTests.cpp  neuraldata.h  neuraldata.tcc  neurallib.cpp  neuronlayer.h  simpleneurons.h  test1.cpp
